--- a/cla-frontend-corporate-console/src/ionic/theme/styles.scss
+++ b/cla-frontend-corporate-console/src/ionic/theme/styles.scss
@@ -64,7 +64,7 @@ ion-menu {
   }
 
   .menu-list {
-    padding-left: 1rem;
+    padding-left: 2rem;
     .item {
       font-weight: bold;
     }
